--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -1,9 +1,8 @@
-name: 'Deploy on netlify'
+name: Lambda Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: ['main']
 
 jobs:
   build:
@@ -22,7 +21,7 @@ jobs:
           cache-dependency-path: 'package-lock.json'
       - run: npm ci
       - run: npm run build
-      - name: Deploying on netlify
+       - name: Deploying on netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
