--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -1,4 +1,4 @@
-name: Lambda Deploy
+name: 'Deploy on netlify'
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
           cache-dependency-path: 'package-lock.json'
       - run: npm ci
       - run: npm run build
-       - name: Deploying on netlify
+      - name: Deploying on netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
