--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
 [build]
-    command = "npm run build"
-    functions = "functions/"
-    publish = "build"
+  command = "npm run build"
+  functions = "netlify/functions/"
+  publish = "build"
 
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+  
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
