--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - feat/express
 
 jobs:
   build:
@@ -28,6 +29,5 @@ jobs:
           github-token: ${{ secrets.GT_TOKEN }}
           netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-          build-dir: './build'
-          functions-dir: './functions'
+          functions-dir: 'netlify/functions'
           comment-on-commit: true
