--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,9 @@
-[build]
-  command = "npm run build"
-  functions = "netlify/functions/"
-  publish = "build"
-
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
   
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
   force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
