--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -28,6 +28,4 @@ jobs:
           github-token: ${{ secrets.GT_TOKEN }}
           netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-          build-dir: './build'
-          functions-dir: './functions'
-          comment-on-commit: true
+      - run: sudo netlify deploy --prod
