--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
     functions = "functions/"
     publish = "build"
 
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
