--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
     publish = "build"
 
 [functions]
-  external_node_modules = ["express"]
+  external_node_modules = ["express","serverless-http"]
   node_bundler = "esbuild"
 
 
